# GlobalProtect-openconnect

./: .gitignore  Cargo.toml  Makefile  README.md  changelog.md  flake.nix
.github/: FUNDING.yml
.github/workflows/: build-deb.yaml  build.yaml  publish-ppa.yaml  release.yaml
apps/gpauth/: tauri.conf.json
apps/gpclient/src/: launch_gui.rs
apps/gpgui-helper/src-tauri/: tauri.conf.json
apps/gpgui-helper/src-tauri/src/: updater.rs
apps/gpgui-replica/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
apps/gpgui-replica/scripts/: install.sh  uninstall.sh
apps/gpgui-replica/src/: App.tsx  main.tsx
apps/gpgui-replica/src-tauri/: Cargo.toml  tauri.conf.json
apps/gpgui-replica/src-tauri/capabilities/: default.json
apps/gpgui-replica/src-tauri/src/: connect.rs  ipc.rs  lib.rs  main.rs  settings.rs  updater.rs
apps/gpgui-replica/src/components/: ConnectButton.tsx  CredentialsDialog.tsx  Footer.tsx  HamburgerMenu.tsx  Header.tsx  MfaDialog.tsx  PortalInput.tsx  StatusShield.tsx  UpdateBanner.tsx
apps/gpgui-replica/src/pages/settings/: CheckboxRow.tsx  (+5 more)
apps/gpgui-replica/src/tauri/: commands.ts  events.ts
apps/gpgui-replica/src/theme/: theme.ts
apps/gpgui-replica/src/types/: connection.ts  vpn.ts
apps/gpservice/: Cargo.toml
apps/gpservice/src/: handlers.rs  routes.rs  ws_server.rs
crates/common/src/: constants.rs
crates/gpapi/src/process/: gui_launcher.rs
packaging/apk/: APKBUILD.in
packaging/aur/globalprotect-openconnect-git/: .SRCINFO  PKGBUILD
packaging/binary/: Makefile.in
packaging/deb/: control.in
packaging/pkgbuild/: PKGBUILD.in
packaging/rpm/: globalprotect-openconnect.changes.in  globalprotect-openconnect.spec.in
scripts/: deb-install.sh  gh-release.sh  update-flake-hashes.sh
(+8 files in other folders)
