[package]
name = "gpgui-replica"
description = "Open-source GUI for GlobalProtect-openconnect (gpgui v2.5.4 replica)"
rust-version.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
gpapi = { path = "../../../crates/gpapi", features = ["tauri", "clap"] }
common = { path = "../../../crates/common" }
tauri.workspace = true

tokio.workspace = true
anyhow.workspace = true
log.workspace = true
env_logger.workspace = true
serde.workspace = true
serde_json.workspace = true

[features]
default = ["tauri/custom-protocol"]
