[package]
name = "gpgui-replica"
description = "Open-source GlobalProtect VPN client GUI by Atharv"
rust-version.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
gpapi = { path = "../../../crates/gpapi", features = ["tauri", "clap"] }
common = { path = "../../../crates/common" }
tauri.workspace = true
tauri-plugin-shell = "2"

tokio = { workspace = true, features = ["io-std", "io-util", "macros", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = "0.24"
futures-util.workspace = true
anyhow.workspace = true
log.workspace = true
env_logger.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
clap.workspace = true
dirs = "6"
reqwest = { workspace = true }

[features]
default = ["tauri/custom-protocol"]
